cmake_minimum_required(VERSION 2.8)

add_subdirectory(Adjacency)
add_subdirectory(DeltaPath)
add_subdirectory(DeltaPathFinder)
add_subdirectory(Layer)
add_subdirectory(SemanticGraph)
add_subdirectory(SemanticWordNet)
add_subdirectory(HypernymHandler)
add_subdirectory(HyponymHandler)
add_subdirectory(SynonymHandler)
add_subdirectory(SynsetHandler)
add_subdirectory(Senses)
add_subdirectory(Wrapper)
